Add local media and meeting workspace v0.4.0